# blogapp

./: .gitignore  README.md  pyproject.toml
blogapp/: settings.py  wsgi.py
blogapp/blog/: apps.py  managers.py  models.py
